# clawhermes-qq

./: .gitignore  pyproject.toml
src/clawhermes_qq/: __init__.py  adapter.py
tests/: test_qq_adapter.py
